--- a/EnglishDongfang/manifest.json
+++ b/EnglishDongfang/manifest.json
@@ -198,10 +198,12 @@
 					"js/mui.js",
 					"css/mui.css",
 					"list.html",
-					"pullrefresh_sub.html"
+					"pullrefresh_sub.html",
+					"pullrefresh_group.html"
 				],
 				"refer": [
-					"guide.html"
+					"guide.html",
+					"pullrefresh_group_element.html"
 				],
 				"priority": 0
 			},
@@ -228,6 +230,40 @@
 					"js/mui.min.js",
 					"css/mui.min.css",
 					"fonts/mui.ttf"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"pullrefresh_group.html": {
+				"resources": [
+					"js/common_request.js",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [
+					"pullrefresh_group_element.html"
+				],
+				"priority": 0
+			},
+			"pullrefresh_group_element.html": {
+				"resources": [
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"js/common_request.js",
+					"js/mui.min.js"
+				],
+				"refer": [
+					"content_page.html"
+				],
+				"priority": 0
+			},
+			"content_page.html": {
+				"resources": [
+					"css/mui.min.css",
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"js/comment_util.js"
 				],
 				"refer": [],
 				"priority": 0
