--- a/reader/manifest.json
+++ b/reader/manifest.json
@@ -209,7 +209,9 @@
 					"css/mui.min.css",
 					"list.html",
 					"img/36kr_2x.png",
-					"js/index.js"
+					"js/index.js",
+					"js/mui.js",
+					"css/mui.css"
 				],
 				"refer": [
 					"browser.html",
@@ -236,7 +238,9 @@
 					"tmpl/news_item.js",
 					"js/html5sql.js",
 					"img/bg.png",
-					"js/feed.js"
+					"js/feed.js",
+					"js/mui.min.js",
+					"css/mui.min.css"
 				],
 				"refer": [],
 				"priority": 0
@@ -250,7 +254,8 @@
 			},
 			"setting.html": {
 				"resources": [
-					"css/mui.min.css"
+					"css/mui.min.css",
+					"css/mui.css"
 				],
 				"refer": [],
 				"priority": 0
